fix(home): balance hero description line wrap with text-wrap pretty (#3317)

--- a/packages/app/src/modules/home/HomeHero.module.scss
+++ b/packages/app/src/modules/home/HomeHero.module.scss
@@ -8,6 +8,10 @@
 	gap: 2rem;
 }
 
+.heroDescription {
+	text-wrap: pretty;
+}
+
 .cta.cta {
 	@include respond-to(sm) {
 		justify-content: center;
